2011-03-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Add #reading-styles-from-another-filetype subsection, based on
   patch by Matthew Brush (thanks).
 * doc/geany.txt, doc/geany.html:
   Add #filenames subsection for filetype definition files explaining
   the filename extensions and special cases.


2011-03-28  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/document.c, src/document.h, src/editor.c, src/keybindings.c:
   Don't update parent WorkObjects when updating one in real-time. This
   should fix some performance issues if a WorkObject has many parents.


2011-03-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/makefile.win32, src/main.c, src/Makefile.am, configure.ac,
   wscript:
   Initialize GLib's Gthread system early at startup in case any
   plugins need it.
 * src/keybindings.c, src/keybindings.h, src/plugindata.h,
   doc/geany.txt, doc/geany.html:
   Add new keybinding 'Remove Markers and Error Indicators'.


2011-03-26  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/sidebar.c:
   Fix the sidebar popup menu to properly use the currently selected item
   rather than the previous one.
   Also change the hack used for the selection to be updated in the input
   handlers to call the GtkTreeView's handler manually rather than doing
   the actual job in IDLE callbacks for the TreeView's handler to have run.
 * doc/geany.html, doc/geany.txt, geany.glade, src/document.c,
   src/editor.h, src/interface.c, src/interface.h, src/keyfile.c,
   src/project.c:
   Add possibility to detect the indentation width from the file content
   (not supported if indentation type is tabs only).
 * plugins/splitwindow.c:
   Enable code folding in splitview window (based on a patch by Matthew
   Brush, thanks! - closes #3097780).
   Fix confusing terminology in Split Window plugin menu labels (patch
   by Matthew Brush - closes #2796316).