@@ -352,6 +352,8 @@
 	geany_functions->p_filetypes->filetypes_index
 #define filetypes_get_display_name \
 	geany_functions->p_filetypes->filetypes_get_display_name
+#define filetypes_get_sorted_by_name \
+	geany_functions->p_filetypes->filetypes_get_sorted_by_name
 #define navqueue_goto_line \
 	geany_functions->p_navqueue->navqueue_goto_line
 #define main_reload_configuration \
