@@ -305,7 +305,8 @@ static FiletypeFuncs filetype_funcs = {
 	&filetypes_detect_from_file,
 	&filetypes_lookup_by_name,
 	&filetypes_index,
-	&filetypes_get_display_name
+	&filetypes_get_display_name,
+	&filetypes_get_sorted_by_name
 };
 
 static NavQueueFuncs navqueue_funcs = {
